# generative-ai

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
notebooks/: README.md
notebooks/agent-framework/: README.md
notebooks/agent-framework/dotnet/: agentframework-101.dib
notebooks/azure openai/dotnet/: gen-ai-for-devs.ipynb
notebooks/azure openai/python/: gen-ai-for-devs.ipynb
notebooks/azure-openai/: README.md
notebooks/azure-openai/dotnet/: Utilities.cs  gen-ai-for-devs.ipynb
notebooks/azure-openai/python/: deepresearch-agent.ipynb  gen-ai-for-devs.ipynb
notebooks/semantic-kernel/: README.md
notebooks/semantic-kernel/Resources/: sales_data.txt
notebooks/semantic-kernel/dotnet/: Common.cs  Settings.cs  agents-01.dib  aifoundry-agents.dib  getting-started.ipynb  orchestrator.ipynb  semantickernel-101.ipynb  semantickernel-agents.dib  sk-agents-01.dib  sk-azureai-agents-02.dib
samples/: README.md
samples/dotnet/A2A-CustomerService/: .gitignore  .spark-initial-sha  PRD.md  README.md  package-lock.json
samples/dotnet/ConvertHeicMCP/: ConvertHeicMCP.csproj  ConvertHeicMCP.sln  HeicConverter.cs  HeicTools.cs  Program.cs
samples/dotnet/CustomCopilot/: CustomCopilot.csproj  Program.cs  (+1 more)
samples/python/maf-chatkit-integration/: README.md  app.py  attachment_store.py  flight_widget.py  parking_widget.py  pyproject.toml  store.py
samples/python/maf-chatkit-integration/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
samples/python/maf-chatkit-integration/frontend/src/: App.tsx  main.tsx
(+403 files in other folders)
